4B/cs444/tests/pass/pass_callstaticmethods.joos
/* pass: call static methods */
public class A {
  public A() {}
  public void m2() {
    java.lang.System.exit();
  }
}

