4B/cs444/tests/fail/fail_classliterals.joos
/* fail: class literals */
public class A {
  protected java.lang.Class x = A.class;
}

